# AddPathToEnvirVar

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  core.rs  main.rs  windows.rs
