[package]
name = "pathctl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }